--- a/src/Archmage/GameBundle/Resources/views/Army/disband.html.twig
+++ b/src/Archmage/GameBundle/Resources/views/Army/disband.html.twig
@@ -25,7 +25,7 @@
                     </div>
                 </div>
                 <div class="panel-footer text-center">
-                    <a class="btn btn-default" href="{{ path( 'archmage_game_army_recruit' ) }}"><i class="fa fa-fw fa-user-plus"></i>Reclutar</a>
+                    <a class="btn btn-default" href="{{ path( 'archmage_game_army_attack' ) }}"><i class="fa fa-fw fa-user-plus"></i>Atacar</a>
                 </div>
             </div>
         </div>
@@ -76,7 +76,7 @@
         {% else %}
         <div class="container">
             <div class="col-xs-12 alert alert-danger text-responsive text-center" role="alert">
-                <i class="fa fa-fw fa-exclamation-triangle"></i> Actualmente no tienes tropas en tu ejército. Tal vez deberías <i class="fa fa-fw fa-user-plus"></i><a href="{{ path('archmage_game_army_recruit') }}">Reclutar</a> alguna.
+                <i class="fa fa-fw fa-exclamation-triangle"></i> Actualmente no tienes tropas en tu ejército. Tal vez deberías <i class="fa fa-fw fa-user-plus"></i><a href="{{ path('archmage_game_magic_conjure') }}">Invocar</a> alguna.
             </div>
         </div>
         {% endfor %}
