--- a/src/Archmage/GameBundle/Resources/views/Army/quest.html.twig
+++ b/src/Archmage/GameBundle/Resources/views/Army/quest.html.twig
@@ -20,7 +20,7 @@
                             <img class="custom-thumbnail" src="{{ asset('bundles/archmagegame/images/kingdom/quest.jpg') }}">
                         </div>
                         <div class="col-xs-8 text-padded">
-                            <div class="col-xs-12">Aquí puedes gastar 10 <span class="label label-extra">Turnos</span> y aceptar un contrato para mandar a tus tropas a una misión en busca de fortuna y gloria. En algunos incluso existe la probabilidad de encontrar un <span class="label label-legendary">Artefacto</span> legendario.</div>
+                            <div class="col-xs-12">Aquí puedes gastar 5 <span class="label label-extra">Turnos</span> y un <span class="label label-map">Mapa</span> para mandar a tus tropas a la batalla en busca de fortuna y gloria. En algunos casos incluso existe la probabilidad de encontrar un <span class="label label-legendary">Artefacto</span> legendario.</div>
                         </div>
                     </div>
                 </div>
@@ -36,15 +36,14 @@
                 <div class="panel-body text-responsive">
                     <div class="row">
                         <div class="col-xs-4">
-                            <img class="custom-thumbnail-left" src="{{ asset( 'bundles/archmagegame/images/kingdom/quest.jpg' ) }}" />
+                            <img class="custom-thumbnail" src="{{ asset( 'bundles/archmagegame/images/map/' ~ map.image ~ '.jpg' ) }}" />
                         </div>
                         <div class="col-xs-8 text-padded">
                             {% for troop in map.troops %}
                                 {# row #}
-                                <div class="col-xs-12"><i class="fa fa-fw fa-users"></i><span class="label label-{{ troop.unit.faction.class }}"><a href="{{ path('archmage_game_home_help') }}#{{ troop.unit.name|slug }}" class="link">{{ troop.unit.name }}</a></span> {{ troop.quantity|nf }}</div>
+                                <div class="col-xs-12"><i class="fa fa-fw fa-users"></i><span class="label label-{{ troop.unit.faction.class }}" data-toggle="tooltip" data-placement="top" title="Tropas enemigas a derrotar"><a href="{{ path('archmage_game_home_help') }}#{{ troop.unit.name|slug }}" class="link">{{ troop.unit.name }}</a></span> {{ troop.quantity|nff }}</div>
                             {% endfor %}
-                            <div class="col-xs-12"><i class="fa fa-fw fa-diamond"></i><span class="label label-{{ map.artifact.class }}"><a href="{{ path('archmage_game_home_help') }}#{{ map.artifact.name|slug }}" class="link">{{ map.artifact.name }}</a></span></div>
-                            <div class="col-xs-12"><i class="fa fa-fw fa-money"></i>{{ map.gold|nf }}</div>
+                            <div class="col-xs-12 text-lore"><small><i>La X siempre marca el lugar!</i></small></div>
                         </div>
                     </div>
                 </div>
@@ -53,7 +52,7 @@
                         <div class="form-group">
                             <div class="input-group">
                                 <div class="btn-group" role="group" aria-label="...">
-                                    <button type="submit" id="activate" name="action" value="activate" class="btn btn-default"><i class="fa fa-fw fa-flag"></i>Aceptar</button>
+                                    <button type="submit" id="activate" name="action" value="activate" class="btn btn-default"><i class="fa fa-fw fa-flag"></i>Atacar</button>
                                 </div>
                                 <input type="hidden" id="map" name="map" value="{{ map.id }}" required />
                             </div>
