--- a/src/Archmage/GameBundle/Resources/views/Home/help.html.twig
+++ b/src/Archmage/GameBundle/Resources/views/Home/help.html.twig
@@ -58,7 +58,7 @@
                 </div>
             </div>
             <div class="panel panel-default">
-                <div class="panel-heading text-center"><i class="fa fa-fw fa-magic"></i>Magia</div>
+                <div class="panel-heading text-center"><i class="fa fa-fw fa-flask"></i>Magia</div>
                 <div class="panel-body text-responsive text-only">
                     <p>En el juego existen multitud de <span class="label label-extra">Hechizos</span> que el jugador podrá conjurar sobre sí mismo o sobre otros para obtener ventaja directa en combate, invocar <span class="label label-extra">Unidades</span> o <span class="label label-extra">Encantamientos</span>, entre otros. El nivel de <span class="label label-extra">Magia</span> de un mago determina la potencia y duración de los mismos, así como su nivel de investigación, y viene dado por la cantidad de <span class="label label-extra">Hechizos</span> de su color que tiene investigados, dividido entre 4. Así, un mago novició con nivel 1 podrá investigar sus cuatro <span class="label label-extra">Hechizos</span> de nivel 1 para acceder al nivel 2, y así sucesivamente hasta el nivel 5. También pueden ser adquiridos <span class="label label-extra">Hechizos</span> de otros colores en la subasta para beneficiarse de sus propiedades, aunque éstos no incrementarán el nivel de <span class="label label-extra">Magia</span> como los propios. Para obtener un nuevo <span class="label label-extra">Hechizo</span>, un mago debe emplear <span class="label label-extra">Turnos</span> en completar la investigación, que serán más reducidos cuantos más <span class="label label-extra">Gremios</span> tenga construidos. Una vez investigado, podrá conjurarlo cuando quiera, siempre que tenga el nivel de <span class="label label-extra">Magia</span>, el <span class="label label-extra">Maná</span> y los <span class="label label-extra">Turnos</span> necesarios para hacerlo. Algunos <span class="label label-extra">Hechizos</span> y <span class="label label-extra">Artefactos</span> pueden colocarse en <span class="label label-extra">Defensa</span> gastando 1 <span class="label label-extra">Turno</span> y se activarán cuando te ataquen, pudiendo cambiar las tornas en una batalla importante. También podrás activar <span class="label label-extra">Artefactos</span> y romper <span class="label label-extra">Encantamientos</span>, aliados o enemigos, con cierta probabilidad de éxito, dependiendo de la <span class="label label-extra">Defensa Mágica</span> del adversario.</p>
                 </div>
@@ -66,7 +66,7 @@
             <div class="panel panel-default">
                 <div class="panel-heading text-center"><i class="fa fa-fw fa-magic"></i>Alquimia</div>
                 <div class="panel-body text-responsive text-only">
-                    <p>.</p>
+                    <p>En ocasiones encontrar el <span class="label label-extra">Artefacto</span> que necesitas en ese momento es muy complicado, normalmente debes esperar a que salga en la subasta y ganar la puja. Pero mediante la Alquimia y la colección de <span class="label label-recipe">Recetas</span>, un jugador convierte 2 <span class="label label-extra">Artefactos</span></p> y <span class="label label-extra">Oro</span> para obtener otro <span class="label label-extra">Artefacto</span>. Se pueden comprar en la subasta o con el hechizo <span class="label label-danger">Saquear</span>, y son reutilizables, a no ser que otorgue un <span class="label label-legendary">Artefacto</span> legendario, en cuyo caso se queman tras su uso.
                 </div>
             </div>
             <div class="panel panel-default"><a name="batalla"></a>
@@ -100,9 +100,9 @@
                 </div>
             </div>
             <div class="panel panel-default">
-                <div class="panel-heading text-center"><i class="fa fa-fw fa-magic"></i>Aventura</div>
+                <div class="panel-heading text-center"><i class="fa fa-fw fa-map"></i>Aventura</div>
                 <div class="panel-body text-responsive text-only">
-                    <p>.</p>
+                    <p>Para aquellos jugadores que no pueden estar mucho tiempo sin hacer nada, siempre tienen la posibilidad de usar <span class="label label-map">Mapas</span>, pequeños trozos de papel que señalan la localización de un <span class="label label-extra">Artefacto</span> y muchos tesoros. Pero cuidado, estará protegido por muchas tropas, ejércitos de monstruos vagabundos que no buscan más que la destrucción. Pueden obtenerse en la subasta, o mediante el hechizo <span class="label label-primary">Iluminación</span>. Existen tres niveles de mapas, fácil (verde), medio (amarillo) y difícil (rojo), y sus recompensas, tanto <span class="label label-extra">Artefacto</span> como <span class="label label-extra">Oro</span>, aumentan con la dificultad, llegando incluso a tener la posibilidad de obtener un <span class="label label-legendary">Artefacto</span> legendario.</p>
                 </div>
             </div>
             <div class="panel panel-default">
@@ -271,7 +271,7 @@
         <div class="col-xs-12">
             <div class="page-header text-center">
                 <a name="hechizos"></a>
-                <h1><i class="fa fa-fw fa-info-circle"></i>Hechizos ({{ spells|length|nf }})</h1>
+                <h1><i class="fa fa-fw fa-info-circle"></i>Hechizos y Encantamientos ({{ spells|length|nf }})</h1>
             </div>
         </div>
         {% for spell in spells %}
