--- a/src/Archmage/GameBundle/Resources/views/Kingdom/auction.html.twig
+++ b/src/Archmage/GameBundle/Resources/views/Kingdom/auction.html.twig
@@ -45,9 +45,9 @@
                         </div>
                         <div class="col-xs-8 text-padded">
                             {# row #}
-                            <div class="col-xs-4"><i class="fa fa-fw fa-money"></i><span data-toggle="tooltip" data-placement="top" title="Mantenimento de Oro al turno por nivel">-{{ (auction.contract.hero.goldMaintenance * auction.contract.level)|nf }}</span></div>
-                            <div class="col-xs-4"><i class="fa fa-fw fa-users"></i><span data-toggle="tooltip" data-placement="top" title="Mantenimento de Personas al turno por nivel">-{{ (auction.contract.hero.peopleMaintenance * auction.contract.level)|nf }}</span></div>
-                            <div class="col-xs-4"><i class="fa fa-fw fa-tint"></i><span data-toggle="tooltip" data-placement="top" title="Mantenimento de Maná al turno por nivel">-{{ (auction.contract.hero.manaMaintenance * auction.contract.level)|nf }}</span></div>
+                            <div class="col-xs-4"><i class="fa fa-fw fa-money"></i><span data-toggle="tooltip" data-placement="top" title="Mantenimento total de Oro al turno">-{{ (auction.contract.hero.goldMaintenance * auction.contract.level)|nf }}</span></div>
+                            <div class="col-xs-4"><i class="fa fa-fw fa-users"></i><span data-toggle="tooltip" data-placement="top" title="Mantenimento total de Personas al turno">-{{ (auction.contract.hero.peopleMaintenance * auction.contract.level)|nf }}</span></div>
+                            <div class="col-xs-4"><i class="fa fa-fw fa-tint"></i><span data-toggle="tooltip" data-placement="top" title="Mantenimento total de Maná al turno">-{{ (auction.contract.hero.manaMaintenance * auction.contract.level)|nf }}</span></div>
                             {# row #}
                             <div class="col-xs-12"><i class="fa fa-fw fa-joomla"></i>{{ auction.contract.hero.skill.description|raw }}</div>
                             {# row #}
@@ -176,7 +176,7 @@
         {% elseif auction.item is not null %}
         <div class="col-xs-12 col-md-6">
             <div class="panel panel-{{ auction.item.artifact.class }}">
-                <div class="panel-heading text-center"><i class="fa fa-fw fa-diamond"></i><a href="{{ path('archmage_game_home_help') }}#{{ auction.item.artifact.name|slug }}" class="link">{{ auction.item.artifact.name }}</a> <span data-toggle="tooltip" data-placement="top" title="Cantidad de Artefactos">[{{ auction.item.quantity|nf }}]</span></div>
+                <div class="panel-heading text-center"><i class="fa fa-fw fa-diamond"></i><a href="{{ path('archmage_game_home_help') }}#{{ auction.item.artifact.name|slug }}" class="link">{{ auction.item.artifact.name }}</a></div>
                 <div class="panel-body text-responsive">
                     <div class="row">
                         <div class="col-xs-4">
@@ -213,16 +213,18 @@
         {% elseif auction.recipe is not null %}
         <div class="col-xs-12 col-md-6">
             <div class="panel panel-recipe">
-                <div class="panel-heading text-center"><i class="fa fa-fw fa-flask"></i><a href="{{ path('archmage_game_home_help') }}#{{ auction.recipe.result.name|slug }}" class="link">{{ auction.recipe.result.name }}</a></div>
+                <div class="panel-heading text-center"><i class="fa fa-fw fa-flask"></i><a href="{{ path('archmage_game_home_help') }}#recetas" class="link">Receta de Alquimia</a></div>
                 <div class="panel-body text-responsive">
                     <div class="row">
                         <div class="col-xs-4">
                             <img class="custom-thumbnail" src="{{ asset( auction.recipe.result.image ) }}" />
                         </div>
                         <div class="col-xs-8 text-padded">
-                            <div class="col-xs-12"><i class="fa fa-fw fa-diamond"></i><span class="label label-{{ auction.recipe.first.class }}"><a href="{{ path('archmage_game_home_help') }}#{{ auction.recipe.first.name|slug }}" class="link">{{ auction.recipe.first.name }}</a></span></div>
-                            <div class="col-xs-12"><i class="fa fa-fw fa-diamond"></i><span class="label label-{{ auction.recipe.second.class }}"><a href="{{ path('archmage_game_home_help') }}#{{ auction.recipe.second.name|slug }}" class="link">{{ auction.recipe.second.name }}</a></span></div>
-                            <div class="col-xs-12"><i class="fa fa-fw fa-money"></i>{{ auction.recipe.gold|nf }}</div>
+                            <div class="col-xs-12"><i class="fa fa-fw fa-diamond"></i><span class="label label-{{ auction.recipe.first.class }}"><a href="{{ path('archmage_game_home_help') }}#{{ auction.recipe.first.name|slug }}" class="link" data-toggle="tooltip" data-placement="top" title="Primer Artefacto necesario para la Alquimia">{{ auction.recipe.first.name }}</a></span></div>
+                            <div class="col-xs-12"><i class="fa fa-fw fa-diamond"></i><span class="label label-{{ auction.recipe.second.class }}"><a href="{{ path('archmage_game_home_help') }}#{{ auction.recipe.second.name|slug }}" class="link" data-toggle="tooltip" data-placement="top" title="Segundo Artefacto necesario para la Alquimia">{{ auction.recipe.second.name }}</a></span></div>
+                            <div class="col-xs-12"><i class="fa fa-fw fa-money"></i>{{ auction.recipe.gold|nff }} <span class="label label-extra" data-toggle="tooltip" data-placement="top" title="Oro necesario para la Alquimia">Oro</span></div>
+                            <div class="col-xs-12"><i class="fa fa-fw fa-diamond"></i><span class="label label-{{ auction.recipe.result.class }}"><a href="{{ path('archmage_game_home_help') }}#{{ auction.recipe.result.name|slug }}" class="link" data-toggle="tooltip" data-placement="top" title="Artefacto resultante de la Alquimia">{{ auction.recipe.result.name }}</a></span></div>
+                            <div class="col-xs-12 text-lore"><small><i>Un poco de esto, un poco de aquello y... TACHÁN!</i></small></div>
                         </div>
                     </div>
                 </div>
@@ -254,15 +256,14 @@
                 <div class="panel-body text-responsive">
                     <div class="row">
                         <div class="col-xs-4">
-                            <img class="custom-thumbnail-left" src="{{ asset( 'bundles/archmagegame/images/kingdom/quest.jpg' ) }}" />
+                            <img class="custom-thumbnail" src="{{ asset( 'bundles/archmagegame/images/map/' ~ auction.map.image ~ '.jpg' ) }}" />
                         </div>
                         <div class="col-xs-8 text-padded">
                             {% for troop in auction.map.troops %}
                             {# row #}
-                            <div class="col-xs-12"><i class="fa fa-fw fa-users"></i><span class="label label-{{ troop.unit.faction.class }}"><a href="{{ path('archmage_game_home_help') }}#{{ troop.unit.name|slug }}" class="link">{{ troop.unit.name }}</a></span> {{ troop.quantity|nf }}</div>
+                            <div class="col-xs-12"><i class="fa fa-fw fa-users"></i><span class="label label-{{ troop.unit.faction.class }}" data-toggle="tooltip" data-placement="top" title="Tropas enemigas a derrotar"><a href="{{ path('archmage_game_home_help') }}#{{ troop.unit.name|slug }}" class="link">{{ troop.unit.name }}</a></span> {{ troop.quantity|nff }}</div>
                             {% endfor %}
-                            <div class="col-xs-12"><i class="fa fa-fw fa-diamond"></i><span class="label label-{{ auction.map.artifact.class }}"><a href="{{ path('archmage_game_home_help') }}#{{ auction.map.artifact.name|slug }}" class="link">{{ auction.map.artifact.name }}</a></span></div>
-                            <div class="col-xs-12"><i class="fa fa-fw fa-money"></i>{{ auction.map.gold|nf }}</div>
+                            <div class="col-xs-12 text-lore"><small><i>La X siempre marca el lugar!</i></small></div>
                         </div>
                     </div>
                 </div>
