--- a/src/Archmage/GameBundle/Resources/views/Magic/alchemy.html.twig
+++ b/src/Archmage/GameBundle/Resources/views/Magic/alchemy.html.twig
@@ -19,7 +19,7 @@
                                 <img class="custom-thumbnail" src="{{ asset('bundles/archmagegame/images/kingdom/alchemy.jpg') }}">
                             </div>
                             <div class="col-xs-8 text-padded">
-                                <div class="col-xs-12">Aquí puedes gastar 5 <span class="label label-extra">Turnos</span> y 1.000.000 <span class="label label-extra">Oro</span> para convertir unos Artefactos en otros, usando diversas <span class="label label-extra">Recetas</span> que puedes adquirir en la subasta.</div>
+                                <div class="col-xs-12">Aquí puedes gastar 5 <span class="label label-extra">Turnos</span> y <span class="label label-extra">Oro</span> para convertir unos <span class="label label-extra">Artefactos</span> en otros, usando <span class="label label-recipe">Recetas</span> que puedes adquirir en la subasta. Aquellas con <span class="label label-legendary">Artefactos</span> legendarios se pierden tras el uso.</div>
                             </div>
                         </div>
                     </div>
@@ -35,16 +35,18 @@
             {% for recipe in player.recipes %}
             <div class="col-xs-12 col-md-6">
                 <div class="panel panel-recipe">
-                    <div class="panel-heading text-center"><i class="fa fa-fw fa-flask"></i><a href="{{ path('archmage_game_home_help') }}#recipes" class="link">{{ recipe.result.name }}</a></div>
+                    <div class="panel-heading text-center"><i class="fa fa-fw fa-flask"></i><a href="{{ path('archmage_game_home_help') }}#recipe" class="link">Receta de Alquimia</a></div>
                     <div class="panel-body text-responsive">
                         <div class="row">
                             <div class="col-xs-4">
                                 <img class="custom-thumbnail" src="{{ asset( recipe.result.image ) }}">
                             </div>
                             <div class="col-xs-8 text-padded">
-                                <div class="col-xs-12"><i class="fa fa-fw fa-diamond"></i><span class="label label-{{ recipe.first.class }}"><a href="{{ path('archmage_game_home_help') }}#{{ recipe.first.name|slug }}" class="link">{{ recipe.first.name }}</a></span></div>
-                                <div class="col-xs-12"><i class="fa fa-fw fa-diamond"></i><span class="label label-{{ recipe.second.class }}"><a href="{{ path('archmage_game_home_help') }}#{{ recipe.second.name|slug }}" class="link">{{ recipe.second.name }}</a></span></div>
-                                <div class="col-xs-12"><i class="fa fa-fw fa-money"></i>{{ recipe.gold|nf }}</div>
+                                <div class="col-xs-12"><i class="fa fa-fw fa-diamond"></i><span class="label label-{{ recipe.first.class }}"><a href="{{ path('archmage_game_home_help') }}#{{ recipe.first.name|slug }}" class="link" data-toggle="tooltip" data-placement="top" title="Primer Artefacto necesario para la Alquimia">{{ recipe.first.name }}</a></span></div>
+                                <div class="col-xs-12"><i class="fa fa-fw fa-diamond"></i><span class="label label-{{ recipe.second.class }}"><a href="{{ path('archmage_game_home_help') }}#{{ recipe.second.name|slug }}" class="link" data-toggle="tooltip" data-placement="top" title="Segundo Artefacto necesario para la Alquimia">{{ recipe.second.name }}</a></span></div>
+                                <div class="col-xs-12"><i class="fa fa-fw fa-money"></i>{{ recipe.gold|nff }} <span class="label label-extra" data-toggle="tooltip" data-placement="top" title="Oro necesario para la Alquimia">Oro</span></div>
+                                <div class="col-xs-12"><i class="fa fa-fw fa-diamond"></i><span class="label label-{{ recipe.result.class }}"><a href="{{ path('archmage_game_home_help') }}#{{ recipe.result.name|slug }}" class="link" data-toggle="tooltip" data-placement="top" title="Artefacto resultante de la Alquimia">{{ recipe.result.name }}</a></span></div>
+                                <div class="col-xs-12 text-lore"><small><i>Un poco de esto, un poco de aquello y... TACHÁN!</i></small></div>
                             </div>
                         </div>
                     </div>
@@ -53,7 +55,7 @@
                             <div class="form-group">
                                 <div class="input-group">
                                     <div class="btn-group" role="group" aria-label="...">
-                                        <button type="submit" id="activate" name="action" value="activate" class="btn btn-default"><i class="fa fa-fw fa-cogs"></i>Fabricar</button>
+                                        <button type="submit" id="craft" name="action" value="craft" class="btn btn-default" {% if not player.hasArtifact(recipe.first) or not player.hasArtifact(recipe.second) %}disabled{% endif %}><i class="fa fa-fw fa-cogs"></i>Fabricar</button>
                                     </div>
                                     <input type="hidden" id="recipe" name="recipe" value="{{ recipe.id }}" required />
                                 </div>
