Eliminados del repositorio las fotos de las unidades neutrales, cambiada Iluminacion por Oasis, de Verde a Blanco. Mejorada Help, con mapas y recetas. Mejorado patch. Vuelto a poner en summary los valores nulos con 0. Nuevo Artefacto RelojArena, reduce turnos de los encantamientos de tu reino.

--- a/src/Archmage/GameBundle/Resources/views/Home/patch.html.twig
+++ b/src/Archmage/GameBundle/Resources/views/Home/patch.html.twig
@@ -71,6 +71,7 @@
                                 <li><span class="label label-extra">Poción de Amor</span>, +30% <span class="label label-extra">Personas</span> a tu Reino.</li>
                                 <li><span class="label label-extra">Poción de Pureza</span>, elimina un <span class="label label-extra">Encantamiento</span> de tu Reino.</li>
                                 <li><span class="label label-extra">Muñeca Voodoo</span>, hasta -25 <span class="label label-extra">Turnos</span> al Reino enemigo.</li>
+                                <li><span class="label label-extra">Reloj de Arena</span>, hasta -100 <span class="label label-extra">Turnos</span> a los Encantamientos de tu Reino.</li>
                                 <li><span class="label label-extra">Cuerno de Guerra</span>, invoca <span class="label label-extra">Humanos</span>.</li>
                             </ul>
                         </li>
@@ -83,6 +84,16 @@
                                 <li><span class="label label-warning">Jinete sin Cabeza</span>, intercambiado con <span class="label label-warning">Nigromante</span>, resucita <span class="label label-warning">Esqueletos</span> tras una batalla.</li>
                             </ul>
                         </li>
+                        <li>Se ha eliminado la posibilidad de reclutar tropas neutrales, y se han eliminado las tropas neutrales del juego:
+                            <ul>
+                                <li><span class="label label-extra">Arqueros</span></li>
+                                <li><span class="label label-extra">Caballeros</span></li>
+                                <li><span class="label label-extra">Catapultas</span></li>
+                                <li><span class="label label-extra">Piqueros</span></li>
+                                <li><span class="label label-extra">Milicias</span></li>
+                            </ul>
+                        </li>
+                        <li>Ahora los <span class="label label-extra">Barracones</span> ya no permiten reclutar más deprisa, sino que aumentan la cantidad de Tropas invocadas por hechizos.</li>
                         <li>Se han ajustado muchos precios de salida de la subasta dependiendo de la rareza.</li>
                         <li>Ahora <span class="label label-success">Control del Clima</span> ya no tiene reducción de recursos.</li>
                         <li>Se han ajustado muchos valores de poder de <span class="label label-extra">Edificios</span> para que sea más complicado saber si un mago tiene o no ejército en su Reino.</li>
