--- a/src/Archmage/GameBundle/Resources/views/Home/help.html.twig
+++ b/src/Archmage/GameBundle/Resources/views/Home/help.html.twig
@@ -75,7 +75,6 @@
                     <p>El principal atractivo del juego es el ataque entre jugadores. Esto permite rápidos y emocionantes cambios en el ranking de magos, creando oportunidades contra jugadores muy poderosos que normalmente lideran el ranking. Al atacar a otro mago, puedes seleccionar qué cantidad de <span class="label label-extra">Unidades</span> vas a llevar a la batalla, así como si quieres lanzar algún <span class="label label-extra">Hechizo</span> o <span class="label label-extra">Artefacto</span> especial para la batalla. Los <span class="label label-extra">Héroes</span> que tengas siempre irán contigo a la guerra. Además, dado que pueden atacarte mientras no estás conectado al juego, tienes la posibilidad de escoger uno de tus <span class="label label-extra">Hechizos</span> y/o <span class="label label-extra">Artefactos</span> para que se activen automáticamente en defensa, junto con la totalidad de tus <span class="label label-extra">Unidades</span> y Héroes.</p>
                     <br>
                     <div class="row text-center">
-                        {# row #}
                         <div class="col-xs-12 col-md-offset-1 col-md-5">
                             <img class="factions" src="{{ asset('bundles/archmagegame/images/factions.png') }}">
                             <div class="caption">
@@ -83,7 +82,6 @@
                                 <p>Cada facción tiene una opuesta y aumentará su daño en combate un +20% contra ella: <span class="label label-danger">Caos</span> > <span class="label label-success">Naturaleza</span> > <span class="label label-primary">Sagrado</span> > <span class="label label-warning">Oscuridad</span> > <span class="label label-info">Fantasmal</span> > <span class="label label-danger">Caos</span></p>
                             </div>
                         </div>
-                        {# row #}
                         <div class="col-xs-12 col-md-5">
                             <img class="factions" src="{{ asset('bundles/archmagegame/images/units.png') }}">
                             <div class="caption">
@@ -121,7 +119,7 @@
         <div class="col-xs-12"><a name="facciones"></a>
             <div class="page-header text-center">
                 <a name="facciones"></a>
-                <h1><i class="fa fa-fw fa-info-circle"></i>Facciones ({{ factions|length }})</h1>
+                <h1><i class="fa fa-fw fa-rebel"></i>Facciones ({{ factions|length }})</h1>
             </div>
         </div>
         {% for faction in factions %}
@@ -130,14 +128,11 @@
                 <div class="panel-heading text-center"><i class="fa fa-fw fa-rebel"></i>{{ faction.name }}</div>
                 <div class="panel-body text-responsive">
                     <div class="row">
-                        {# row #}
                         <div class="col-xs-4">
                             <img class="custom-thumbnail" src="{{ asset(faction.image) }}">
                         </div>
                         <div class="col-xs-8 text-padded">
-                            {# row #}
                             <div class="col-xs-12">{{ faction.description }}</div>
-                            {# row #}
                             <div class="col-xs-12 text-lore"><small><i>{{ faction.lore }}</i></small></div>
                         </div>
                     </div>
@@ -166,23 +161,18 @@
                             <img class="custom-thumbnail" src="{{ asset( building.image ) }}">
                         </div>
                         <div class="col-xs-8 text-padded">
-                            {# row #}
                             <div class="col-xs-4"><i class="fa fa-fw fa-money"></i><span data-toggle="tooltip" data-placement="top" title="Coste de Oro por edificio">-{{ building.goldCost|nf }}</span></div>
                             <div class="col-xs-4"><i class="fa fa-fw fa-users"></i><span data-toggle="tooltip" data-placement="top" title="Coste de Personas por edificio">-{{ building.peopleCost|nf }}</span></div>
                             <div class="col-xs-4"><i class="fa fa-fw fa-tint"></i><span data-toggle="tooltip" data-placement="top" title="Coste de Maná por edificio">-{{ building.manaCost|nf }}</span></div>
-                            {# row #}
                             <div class="col-xs-4"><i class="fa fa-fw fa-money"></i><span data-toggle="tooltip" data-placement="top" title="Cantidad de Oro generado al turno">+{{ building.goldResource|nf }}</span></div>
                             <div class="col-xs-4"><i class="fa fa-fw fa-users"></i><span data-toggle="tooltip" data-placement="top" title="Cantidad de Personas generadas al turno">+{{ building.peopleResource|nf }}</span></div>
                             <div class="col-xs-4"><i class="fa fa-fw fa-tint"></i><span data-toggle="tooltip" data-placement="top" title="Cantidad de Maná generado al turno">+{{ building.manaResource|nf }}</span></div>
-                            {# row #}
                             <div class="col-xs-4"><i class="fa fa-fw fa-money"></i><span data-toggle="tooltip" data-placement="top" title="Mantenimiento de Oro al turno">-{{ building.goldMaintenance|nf }}</span></div>
                             <div class="col-xs-4"><i class="fa fa-fw fa-users"></i><span data-toggle="tooltip" data-placement="top" title="Mantenimiento de Personas al turno">-{{ building.peopleMaintenance|nf }}</span></div>
                             <div class="col-xs-4"><i class="fa fa-fw fa-tint"></i><span data-toggle="tooltip" data-placement="top" title="Mantenimiento de Maná al turno">-{{ building.manaMaintenance|nf }}</span></div>
-                            {# row #}
                             <div class="col-xs-4"><i class="fa fa-fw fa-money"></i><span data-toggle="tooltip" data-placement="top" title="Aumento de capacidad de Oro">+{{ building.goldCap|nf }}</span></div>
                             <div class="col-xs-4"><i class="fa fa-fw fa-users"></i><span data-toggle="tooltip" data-placement="top" title="Aumento de capacidad de Personas">+{{ building.peopleCap|nf }}</span></div>
                             <div class="col-xs-4"><i class="fa fa-fw fa-tint"></i><span data-toggle="tooltip" data-placement="top" title="Aumento de capacidad de Maná">+{{ building.manaCap|nf }}</span></div>
-                            {# row #}
                             <div class="col-xs-12 text-lore"><small><i>{{ building.lore }}</i></small></div>
                         </div>
                     </div>
@@ -211,18 +201,14 @@
                             <img class="custom-thumbnail" src="{{ asset( unit.image ) }}">
                         </div>
                         <div class="col-xs-8 text-padded">
-                            {# row #}
                             <div class="col-xs-4"><i class="fa fa-fw fa-crosshairs"></i><span data-toggle="tooltip" data-placement="top" title="Ataque de la tropa">{{ unit.attack|nf }}</span></div>
                             <div class="col-xs-4"><i class="fa fa-fw fa-shield"></i><span data-toggle="tooltip" data-placement="top" title="Defensa de la tropa">{{ unit.defense|nf }}</span></div>
                             <div class="col-xs-4"><i class="fa fa-fw fa-flash"></i><span data-toggle="tooltip" data-placement="top" title="Velocidad de la tropa">{{ unit.speed }}</span></div>
-                            {# row #}
                             <div class="col-xs-4"><i class="fa fa-fw fa-money"></i><span data-toggle="tooltip" data-placement="top" title="Mantenimiento de Oro al turno">-{{ unit.goldMaintenance|nf }}</span></div>
                             <div class="col-xs-4"><i class="fa fa-fw fa-users"></i><span data-toggle="tooltip" data-placement="top" title="Mantenimiento de Personas al turno">-{{ unit.peopleMaintenance|nf }}</span></div>
                             <div class="col-xs-4"><i class="fa fa-fw fa-tint"></i><span data-toggle="tooltip" data-placement="top" title="Mantenimiento de Maná al turno">-{{ unit.manaMaintenance|nf }}</span></div>
-                            {# row #}
                             <div class="col-xs-6"><i class="fa fa-fw fa-user"></i><span data-toggle="tooltip" data-placement="top" title="Familia de la tropa">{{ unit.family.name }}</span></div>
                             <div class="col-xs-6"><i class="fa fa-fw fa-cogs"></i><span data-toggle="tooltip" data-placement="top" title="Tipo de la tropa">{{ unit.type.name }}</span></div>
-                            {# row #}
                             <div class="col-xs-12 text-lore"><small><i>{{ unit.lore }}</i></small></div>
                         </div>
                     </div>
@@ -251,11 +237,9 @@
                             <img class="custom-thumbnail" src="{{ asset( hero.image ) }}">
                         </div>
                         <div class="col-xs-8 text-padded">
-                            {# row #}
                             <div class="col-xs-4"><i class="fa fa-fw fa-money"></i><span data-toggle="tooltip" data-placement="top" title="Mantenimiento de Oro al turno por nivel">-{{ hero.goldMaintenance|nf }}</span></div>
                             <div class="col-xs-4"><i class="fa fa-fw fa-users"></i><span data-toggle="tooltip" data-placement="top" title="Mantenimiento de Personas al turno por nivel">-{{ hero.peopleMaintenance|nf }}</span></div>
                             <div class="col-xs-4"><i class="fa fa-fw fa-tint"></i><span data-toggle="tooltip" data-placement="top" title="Mantenimiento de Maná al turno por nivel">-{{ hero.manaMaintenance|nf }}</span></div>
-                            {# row #}
                             <div class="col-xs-12 text-lore"><small><i>{{ hero.lore }}</i></small></div>
                         </div>
                     </div>
@@ -284,19 +268,15 @@
                             <img class="custom-thumbnail" src="{{ asset( spell.image ) }}">
                         </div>
                         <div class="col-xs-8 text-padded">
-                            {# row #}
                             <div class="col-xs-6"><i class="fa fa-fw fa-magic"></i><span data-toggle="tooltip" data-placement="top" title="Nivel de Magia mínimo para investigar y conjurar">{{ spell.magic|nf }}</span></div>
                             <div class="col-xs-6"><i class="fa fa-fw fa-tint"></i><span data-toggle="tooltip" data-placement="top" title="Coste de Maná para conjurar">-{{ spell.manaCost|nf }}</span></div>
-                            {# row #}
                             <div class="col-xs-6"><i class="fa fa-fw fa-hourglass-half"></i><span data-toggle="tooltip" data-placement="top" title="Coste de Turnos para conjurar">-{{ spell.turnsCost|nf }}</span></div>
                             <div class="col-xs-6"><i class="fa fa-fw fa-hourglass"></i><span data-toggle="tooltip" data-placement="top" title="Coste de Turnos para investigar">{{ spell.turnsResearch }}</span></div>
-                            {# row #}
                             {% if spell.enchantment %}
                             <div class="col-xs-4"><i class="fa fa-fw fa-money"></i><span data-toggle="tooltip" data-placement="top" title="Mantenimiento de Oro al turno por nivel">-{{ spell.goldMaintenance|nf }}</span></div>
                             <div class="col-xs-4"><i class="fa fa-fw fa-users"></i><span data-toggle="tooltip" data-placement="top" title="Mantenimiento de Personas al turno por nivel">-{{ spell.peopleMaintenance|nf }}</span></div>
                             <div class="col-xs-4"><i class="fa fa-fw fa-tint"></i><span data-toggle="tooltip" data-placement="top" title="Mantenimiento de Maná al turno por nivel">-{{ spell.manaMaintenance|nf }}</span></div>
                             {% endif %}
-                            {# row #}
                             <div class="col-xs-12 text-lore"><small><i>{{ spell.lore }}</i></small></div>
                         </div>
                     </div>
@@ -309,6 +289,61 @@
             </div>
         </div>
         {% endfor %}
+        <div class="col-xs-12">
+            <div class="page-header text-center">
+                <a name="recetas"></a>
+                <h1><i class="fa fa-fw fa-flask"></i>Recetas y <i class="fa fa-fw fa-map"></i>Mapas</h1>
+            </div>
+        </div>
+        <div class="col-xs-12 col-md-6">
+            <div class="panel panel-recipe">
+                <div class="panel-heading text-center"><i class="fa fa-fw fa-flask"></i>Receta de Alquimia</div>
+                <div class="panel-body text-responsive">
+                    <div class="row">
+                        <div class="col-xs-4">
+                            <img class="custom-thumbnail" src="{{ asset( 'bundles/archmagegame/images/kingdom/alchemy.jpg' ) }}">
+                        </div>
+                        <div class="col-xs-8 text-padded">
+                            <div class="col-xs-12"><i class="fa fa-fw fa-diamond"></i><span class="label label-extra">Primer Artefacto</span></div>
+                            <div class="col-xs-12"><i class="fa fa-fw fa-diamond"></i><span class="label label-extra">Segundo Artefacto</span></div>
+                            <div class="col-xs-12"><i class="fa fa-fw fa-money"></i><span class="label label-extra">Oro necesario</span></div>
+                            <div class="col-xs-12"><i class="fa fa-fw fa-diamond"></i><span class="label label-extra">Artefacto resultante</span></div>
+                            <div class="col-xs-12 text-lore"><small><i>Un poco de esto, un poco de aquello y... TACHÁN!</i></small></div>
+                        </div>
+                    </div>
+                </div>
+                <div class="panel-footer text-center text-responsive">
+                    <i class="fa fa-fw fa-joomla"></i>Convierte unos Artefactos en otros
+                </div>
+                {# TAGS FOR SEARCH #}
+                <span class="hidden">Recetas, Alquimia</span>
+            </div>
+        </div>
+        <div class="col-xs-12 col-md-6">
+            <div class="panel panel-map">
+                <div class="panel-heading text-center"><i class="fa fa-fw fa-map"></i>Mapa del Tesoro</div>
+                <div class="panel-body text-responsive">
+                    <div class="row">
+                        <div class="col-xs-4">
+                            <img class="custom-thumbnail" src="{{ asset( 'bundles/archmagegame/images/kingdom/quest.jpg' ) }}" />
+                        </div>
+                        <div class="col-xs-8 text-padded">
+                            <div class="col-xs-12"><i class="fa fa-fw fa-users"></i><span class="label label-extra">Tropa enemiga</span></div>
+                            <div class="col-xs-12"><i class="fa fa-fw fa-users"></i><span class="label label-extra">Tropa enemiga</span></div>
+                            <div class="col-xs-12"><i class="fa fa-fw fa-users"></i><span class="label label-extra">Tropa enemiga</span></div>
+                            <div class="col-xs-12"><i class="fa fa-fw fa-users"></i><span class="label label-extra">Tropa enemiga</span></div>
+                            <div class="col-xs-12"><i class="fa fa-fw fa-users"></i><span class="label label-extra">Tropa enemiga</span></div>
+                            <div class="col-xs-12 text-lore"><small><i>La X siempre marca el lugar!</i></small></div>
+                        </div>
+                    </div>
+                </div>
+                <div class="panel-footer text-center text-responsive">
+                    <i class="fa fa-fw fa-joomla"></i>Otorga Artefactos y Oro como recompensa
+                </div>
+                {# TAGS FOR SEARCH #}
+                <span class="hidden">Mapas, Aventura</span>
+            </div>
+        </div>
         <div class="col-xs-12">
             <div class="page-header text-center">
                 <a name="artefactos"></a>
@@ -325,7 +360,6 @@
                             <img class="custom-thumbnail" src="{{ asset( artifact.image ) }}">
                         </div>
                         <div class="col-xs-8 text-padded">
-                            {# row #}
                             <div class="col-xs-12 text-lore"><small><i>{{ artifact.lore }}</i></small></div>
                         </div>
                     </div>
