--- a/src/Archmage/GameBundle/Resources/views/Home/help.html.twig
+++ b/src/Archmage/GameBundle/Resources/views/Home/help.html.twig
@@ -34,6 +34,12 @@
                 </div>
             </div>
             <div class="panel panel-default">
+                <div class="panel-heading text-center"><i class="fa fa-fw fa-group"></i>Multicuentas</div>
+                <div class="panel-body text-responsive text-only">
+                    <p style="color:red;">El uso de varias cuentas por la misma persona otorga una tremenda ventaja y va en contra de las normas del juego. Los infractores serán perseguidos, <span class="label label-extra">baneados</span> a perpetuidad y <span class="label label-extra">sodomizados con un paraguas</span>.</p>
+                </div>
+            </div>
+            <div class="panel panel-default">
                 <div class="panel-heading text-center"><i class="fa fa-fw fa-hourglass-half"></i>Turnos</div>
                 <div class="panel-body text-responsive text-only">
                     <p>El motor del juego son los <span class="label label-extra">Turnos</span>. Todos los magos ganan 1 <span class="label label-extra">Turno</span> cada 3 minutos, y acumulan hasta un máximo de 300. Con ellos, el jugador tiene a su disposición un amplio abanico de posibilidades, como construir <span class="label label-extra">Edificios</span> que mejoren su producción, velocidad de investigación o almacenamiento y producción de recursos como el <span class="label label-extra">Oro</span>, las <span class="label label-extra">Personas</span> o el <span class="label label-extra">Maná</span>, o incluso mejorar su capacidad de <span class="label label-extra">Defensa Mágica</span> y <span class="label label-extra">Defensa Física</span>, aumentando su protección contra <span class="label label-extra">Hechizos</span>, <span class="label label-extra">Artefactos</span> y ataques enemigos.</p>
@@ -66,7 +72,7 @@
             <div class="panel panel-default">
                 <div class="panel-heading text-center"><i class="fa fa-fw fa-magic"></i>Alquimia</div>
                 <div class="panel-body text-responsive text-only">
-                    <p>En ocasiones encontrar el <span class="label label-extra">Artefacto</span> que necesitas en ese momento es muy complicado, normalmente debes esperar a que salga en la subasta y ganar la puja. Pero mediante la Alquimia y la colección de <span class="label label-recipe">Recetas</span>, un jugador convierte 2 <span class="label label-extra">Artefactos</span></p> y <span class="label label-extra">Oro</span> para obtener otro <span class="label label-extra">Artefacto</span>. Se pueden comprar en la subasta o con el hechizo <span class="label label-danger">Saquear</span>, y son reutilizables, a no ser que otorgue un <span class="label label-legendary">Artefacto</span> legendario, en cuyo caso se queman tras su uso.
+                    <p>En ocasiones encontrar el <span class="label label-extra">Artefacto</span> que necesitas en ese momento es muy complicado, normalmente debes esperar a que salga en la subasta y ganar la puja. Pero mediante la Alquimia y la colección de <span class="label label-recipe">Recetas</span>, un jugador convierte 2 <span class="label label-extra">Artefactos</span> y <span class="label label-extra">Oro</span> para obtener otro <span class="label label-extra">Artefacto</span>. Se pueden comprar en la subasta o con el hechizo <span class="label label-success">Druidismo</span>, y son reutilizables, a no ser que otorgue un <span class="label label-legendary">Artefacto</span> legendario, en cuyo caso se queman tras su uso.</p>
                 </div>
             </div>
             <div class="panel panel-default"><a name="batalla"></a>
@@ -100,19 +106,13 @@
             <div class="panel panel-default">
                 <div class="panel-heading text-center"><i class="fa fa-fw fa-map"></i>Aventura</div>
                 <div class="panel-body text-responsive text-only">
-                    <p>Para aquellos jugadores que no pueden estar mucho tiempo sin hacer nada, siempre tienen la posibilidad de usar <span class="label label-map">Mapas</span>, pequeños trozos de papel que señalan la localización de un <span class="label label-extra">Artefacto</span> y muchos tesoros. Pero cuidado, estará protegido por muchas tropas, ejércitos de monstruos vagabundos que no buscan más que la destrucción. Pueden obtenerse en la subasta, o mediante el hechizo <span class="label label-primary">Iluminación</span>. Existen tres niveles de mapas, fácil (verde), medio (amarillo) y difícil (rojo), y sus recompensas, tanto <span class="label label-extra">Artefacto</span> como <span class="label label-extra">Oro</span>, aumentan con la dificultad, llegando incluso a tener la posibilidad de obtener un <span class="label label-legendary">Artefacto</span> legendario.</p>
+                    <p>Para aquellos jugadores que no pueden estar mucho tiempo sin hacer nada, siempre tienen la posibilidad de usar <span class="label label-map">Mapas</span>, pequeños trozos de papel que señalan la localización de un <span class="label label-extra">Artefacto</span> y muchos tesoros. Pero cuidado, estará protegido por muchas tropas, ejércitos de monstruos vagabundos que no buscan más que la destrucción. Pueden obtenerse en la subasta, o mediante el hechizo <span class="label label-danger">Saquear</span>. Existen tres niveles de mapas, fácil (verde), medio (amarillo) y difícil (rojo), y sus recompensas, tanto <span class="label label-extra">Artefacto</span> como <span class="label label-extra">Oro</span>, aumentan con la dificultad, llegando incluso a tener la posibilidad de obtener un <span class="label label-legendary">Artefacto</span> legendario.</p>
                 </div>
             </div>
             <div class="panel panel-default">
                 <div class="panel-heading text-center"><i class="fa fa-fw fa-magic"></i>Fin del Juego</div>
                 <div class="panel-body text-responsive text-only">
-                    <p>El juego termina cuando un mago ha conseguido encantarse a sí mismo con <span class="label label-extra"><a href="#apocalipsis" class="link">Apocalipsis</a></span> y mantenerlo durante 1000 turnos. El servidor anunciará que alguien (pero no quién) ha lanzado dicho encantamiento, por lo que será tarea del resto de jugadores encontrar y hacer la vida imposible al mago en cuestión, lanzandole <span class="label label-extra">Hechizos</span>, <span class="label label-extra">Artefactos</span>, <span class="label label-extra">Encantamientos</span> y <span class="label label-extra">Ataques</span> para intentar mermar sus posibilidades. Cuando alguien descubra al dueño del Encantamiento mediante un Espionaje, en el Ranking saldrá su nombre junto al símbolo <i class="fa fa-fw fa-eye"></i>, para que el resto de jugadores tenga claro que se ha encontrado al culpable y deje de buscarle. Si el encantamiento se rompe de manera forzada (es decir, por no poder pagar los mantenientos, cosa habitual si se le despoja de tierras suficientes) el juego continará de forma normal. Se convertirá en un tira y afloja por ver qué mago es capaz de aguantar las embestidas de todo el servidor hasta que alguien salga vencedor. Si el encantamiento expira de forma natural, el mago gana la partida, se añadirá al tablón de Leyendas con información como la fecha de la victoria, el poder y las tierras que tenía el mago, para futuras referencias. El juego se detendrá y nadie podrá efectuar ninguna acción, y en apenas 24h, el servidor se reiniciará, borrando toda la base de datos y volviendo a empezar una nueva temporada desde cero. Los jugadores tendrán que volver a registrarse para jugar, pero de esta forma podrán probar otras facciones, e incluso cambiarse de nick para evitar represalias o venganzas.</p>
-                </div>
-            </div>
-            <div class="panel panel-default">
-                <div class="panel-heading text-center"><i class="fa fa-fw fa-group"></i>Multicuentas</div>
-                <div class="panel-body text-responsive text-only">
-                    <p>El uso de varias cuentas por la misma persona otorga una tremenda ventaja y va en contra de las normas del juego. Los infractores serán perseguidos, baneados a perpetuidad y sodomizados con un paraguas.</p>
+                    <p>El juego termina cuando un mago ha conseguido encantarse a sí mismo con <span class="label label-extra"><a href="#apocalipsis" class="link">Apocalipsis</a></span> y mantenerlo durante 900 turnos. El servidor anunciará que alguien (pero no quién) ha lanzado dicho encantamiento, por lo que será tarea del resto de jugadores encontrar y hacer la vida imposible al mago en cuestión, lanzandole <span class="label label-extra">Hechizos</span>, <span class="label label-extra">Artefactos</span>, <span class="label label-extra">Encantamientos</span> y <span class="label label-extra">Ataques</span> para intentar mermar sus posibilidades. Cuando alguien descubra al dueño del Encantamiento mediante un Espionaje, en el Ranking saldrá su nombre junto al símbolo <i class="fa fa-fw fa-eye"></i>, para que el resto de jugadores tenga claro que se ha encontrado al culpable y deje de buscarle. Si el encantamiento se rompe de manera forzada (es decir, por no poder pagar los mantenientos, cosa habitual si se le despoja de tierras suficientes) el juego continará de forma normal. Se convertirá en un tira y afloja por ver qué mago es capaz de aguantar las embestidas de todo el servidor hasta que alguien salga vencedor. Si el encantamiento expira de forma natural, el mago gana la partida, se añadirá al tablón de Leyendas con información como la fecha de la victoria, el poder y las tierras que tenía el mago, para futuras referencias. El juego se detendrá y nadie podrá efectuar ninguna acción, y en apenas 24h, el servidor se reiniciará, borrando toda la base de datos y volviendo a empezar una nueva temporada desde cero. Los jugadores tendrán que volver a registrarse para jugar, pero de esta forma podrán probar otras facciones, e incluso cambiarse de nick para evitar represalias o venganzas.</p>
                 </div>
             </div>
         </div>
@@ -313,7 +313,7 @@
                     </div>
                 </div>
                 <div class="panel-footer text-center text-responsive">
-                    <i class="fa fa-fw fa-joomla"></i>Convierte unos Artefactos en otros
+                    <i class="fa fa-fw fa-joomla"></i>Convierte unos <span class="label label-extra">Artefactos</span> en otros
                 </div>
                 {# TAGS FOR SEARCH #}
                 <span class="hidden">Recetas, Alquimia</span>
@@ -338,7 +338,7 @@
                     </div>
                 </div>
                 <div class="panel-footer text-center text-responsive">
-                    <i class="fa fa-fw fa-joomla"></i>Otorga Artefactos y Oro como recompensa
+                    <i class="fa fa-fw fa-joomla"></i>Otorga <span class="label label-extra">Artefactos</span> y <span class="label label-extra">Oro</span> como recompensa
                 </div>
                 {# TAGS FOR SEARCH #}
                 <span class="hidden">Mapas, Aventura</span>
