--- a/src/Archmage/GameBundle/Resources/views/navbar.html.twig
+++ b/src/Archmage/GameBundle/Resources/views/navbar.html.twig
@@ -17,6 +17,7 @@
                         <li><a href="{{ path('archmage_game_kingdom_tax') }}"><i class="fa fa-fw fa-lg fa-money"></i>Recaudar</a></li>
                         <li><a href="{{ path('archmage_game_kingdom_auction') }}"><i class="fa fa-fw fa-lg fa-legal"></i>Subasta</a></li>
                         <li><a href="{{ path('archmage_game_kingdom_temple') }}"><i class="fa fa-fw fa-lg fa-balance-scale"></i>Templo</a></li>
+                        <li><a href="{{ path('archmage_game_kingdom_market') }}"><i class="fa fa-fw fa-lg fa-ils"></i>Mercado</a></li>
                     </ul>
                 </li>
                 <li class="dropdown">
