--- a/src/Archmage/GameBundle/Resources/views/Home/patch.html.twig
+++ b/src/Archmage/GameBundle/Resources/views/Home/patch.html.twig
@@ -23,7 +23,7 @@
                                 <li><span class="label label-legendary">Legendario</span>, como los <span class="label label-legendary">Anillos</span>.</li>
                             </ul>
                         </li>
-                        <li>A raíz de lo anterior, se han añadido los siguientes Artefactos Legendarios, que otorgan una pasiva única con solo poseerlos:
+                        <li>A raíz de lo anterior, se han añadido los siguientes <span class="label label-legendary">Artefactos</span> Legendarios, que otorgan una pasiva única con solo poseerlos:
                             <ul>
                                 <li><span class="label label-legendary">Anillo Avaricioso</span>, +10% producción de Oro en tu Reino.</li>
                                 <li><span class="label label-legendary">Anillo Poderoso</span>, +10% producción de Maná en tu Reino.</li>
@@ -37,17 +37,18 @@
                             <ul>
                                 <li>Fáciles, de color verde. Normalmente pocas tropas y hasta un Artefacto <span class="label label-extra">Común</span>.</li>
                                 <li>Medios, de color amarillo. Normalmente moderadas tropas y hasta un Artefacto <span class="label label-extra">Raro</span>.</li>
-                                <li>Difíciles, de color rojo. Normalmente muchas tropas y hasta un Artefacto <span class="label label-legendary">Legendario</span>.</li>
+                                <li>Difíciles, de color rojo. Normalmente muchas tropas y hasta un <span class="label label-legendary">Artefacto</span> legendario.</li>
                             </ul>
                         </li>
+                        <li>Ahora el daño en combate se redondea de manera clásica. Si se le hace mas de la mitad del daño a una unidad, muere. Es decir, ahora hay heridas.</li>
                         <li>El combate ha vuelto a su versión original. Ahora la <span class="label label-extra">Velocidad</span> vuelve a ser un factor importante, y las unidades más rapidas dañarán primero a las más lentas.</li>
                         <li>A raíz de lo anterior, se han eliminado los Hechizos de <span class="label label-extra">Velocidad</span> y se han sustituido por otros nuevos:
                             <ul>
                                 <li><span class="label label-info">Lentitud</span> por <span class="label label-info">Sabiduría</span>, reduce el número de Turnos para investigar.
                                 <li><span class="label label-danger">Quemar Alas</span> por <span class="label label-danger">Saquear</span>, encuentra <span class="label label-map">Mapas</span>.</li>
                                 <li><span class="label label-warning">Miedo</span> por <span class="label label-warning">Terror</span>, reduce <span class="label label-extra">Defensa Física</span> y <span class="label label-extra">Defensa Mágica</span> a un Reino enemigo.</li>
-                                <li><span class="label label-primary">Volar</span> por <span class="label label-primary">Iluminación</span>, encuentra <span class="label label-recipe">Recetas</span>.</li>
-                                <li><span class="label label-success">Prisa</span> por <span class="label label-success">Oasis</span>, aumenta la producción de Tropas en tu Reino.</li>
+                                <li><span class="label label-primary">Volar</span> por <span class="label label-success">Druidismo</span>, encuentra <span class="label label-recipe">Recetas</span>.</li>
+                                <li><span class="label label-success">Prisa</span> por <span class="label label-primary">Oasis</span>, aumenta la cantidad de Tropas invocadas en tu Reino.</li>
                             </ul>
                         </li>
                         <li>También a raíz de lo anterior, se han reducido los bonus de <span class="label label-extra">Velocidad</span> de los siguientes Artefactos:
@@ -97,11 +98,14 @@
                         <li>Se han ajustado muchos precios de salida de la subasta dependiendo de la rareza.</li>
                         <li>Ahora <span class="label label-success">Control del Clima</span> ya no tiene reducción de recursos.</li>
                         <li>Se han ajustado muchos valores de poder de <span class="label label-extra">Edificios</span> para que sea más complicado saber si un mago tiene o no ejército en su Reino.</li>
+                        <li>Se han ajustado muchos valores de ataques, defensas y mantenimientos de <span class="label label-extra">Tropas</span>.</li>
                         <li>Se han ajustado muchos valores de bonus de <span class="label label-extra">Héroes</span>.</li>
                         <li>Se han ajustado muchos valores de bonus de <span class="label label-extra">Encantamientos</span>.</li>
                         <li>Ahora solo se subastará una unidad de <span class="label label-extra">Artefacto</span> cada vez.</li>
                         <li>Ahora los <span class="label label-extra">Artefacto</span> otorgan poder, y los <span class="label label-legendary">Artefactos</span> legendarios mucho más poder que los demás.</li>
                         <li>Se ha reducido el cap de poder superior al atacar del 80% al 60%.</li>
+                        <li>Se ha duplicado el mantenimiento de las <span class="label label-extra">Barreras</span> y <span class="label label-extra">Fortalezas</span>.</li>
+                        <li>Se ha introducido en el juego el Mercado Negro, una versión beta de la futura tienda con dinero real, aunque de momento no se podrá pagar. Se dará a cada jugador un número importante de dinero del juego al registrarse para que pruebe.</li>
                     </ul>
                 </div>
                 <div class="panel-footer text-center">Beta cerrada</div>
