--- a/src/Archmage/GameBundle/Resources/views/Home/patch.html.twig
+++ b/src/Archmage/GameBundle/Resources/views/Home/patch.html.twig
@@ -105,7 +105,7 @@
                         <li>Ahora los <span class="label label-extra">Artefacto</span> otorgan poder, y los <span class="label label-legendary">Artefactos</span> legendarios mucho más poder que los demás.</li>
                         <li>Se ha reducido el cap de poder superior al atacar del 80% al 60%.</li>
                         <li>Se ha duplicado el mantenimiento de las <span class="label label-extra">Barreras</span> y <span class="label label-extra">Fortalezas</span>.</li>
-                        <li>Se ha introducido en el juego el Mercado Negro, una versión beta de la futura tienda con dinero real, aunque de momento no se podrá pagar. Se dará a cada jugador un número importante de dinero del juego al registrarse para que pruebe.</li>
+                        <li>Se ha introducido en el juego el Mercado de <span class="label label-rune">Runas</span>, una versión beta de la futura tienda.</li>
                     </ul>
                 </div>
                 <div class="panel-footer text-center">Beta cerrada</div>
