--- a/src/Archmage/GameBundle/Resources/views/Kingdom/market.html.twig
+++ b/src/Archmage/GameBundle/Resources/views/Kingdom/market.html.twig
@@ -7,7 +7,7 @@
     <div class="row">
         <div class="col-xs-12">
             <div class="page-header text-center">
-                <h1><i class="fa fa-fw fa-ils"></i>Mercado</h1>
+                <h1><i class="fa fa-fw fa-ils"></i>Mercado de Runas</h1>
                 {% include "ArchmageGameBundle::resources.html.twig" with {'player': player} %}
             </div>
             <div class="col-xs-12 col-md-6 col-md-offset-3">
@@ -19,7 +19,7 @@
                                 <img class="custom-thumbnail" src="{{ asset('bundles/archmagegame/images/kingdom/rune.jpg') }}">
                             </div>
                             <div class="col-xs-8 text-padded">
-                                <div class="col-xs-12">Aquí puedes gastar las extremadamente díficiles de conseguir <span class="label label-rune">Runas</span> en comprar los artículos que prefieras de nuestra tienda.</div>
+                                <div class="col-xs-12">Aquí puedes gastar tus <span class="label label-rune">Runas</span> en comprar los artículos que prefieras de la tienda.</div>
                             </div>
                         </div>
                     </div>
@@ -48,7 +48,7 @@
                             <div class="form-group">
                                 <div class="input-group">
                                     <div class="btn-group" role="group" aria-label="...">
-                                        <button type="submit" class="btn btn-default" {% if rune.cost > player.runes %}disabled{% endif %}><i class="fa fa-fw fa-ils"></i>Comprar</button>
+                                        <button type="submit" class="btn btn-default" {% if rune.cost > player.runes %}disabled{% endif %}><i class="fa fa-fw fa-ils"></i>Intercambiar</button>
                                     </div>
                                     <input type="hidden" id="rune" name="rune" value="{{ rune.id }}" required />
                                 </div>
